--- a/Integrations/ESPHome/PUMP-1.yaml
+++ b/Integrations/ESPHome/PUMP-1.yaml
@@ -1,20 +1,20 @@
 esphome:
   name: "${name}"
-  friendly_name: Apollo AIR-1 # TODO: Rename
-  comment: Apollo AIR-1 # TODO: Rename
+  friendly_name: Apollo PUMP-1
+  comment: Apollo PUMP-1
   name_add_mac_suffix: true
   platformio_options:
     board_build.flash_mode: dio
 
   project:
-    name: "ApolloAutomation.AIR-1" # TODO: Rename
+    name: "ApolloAutomation.PUMP-1"
     version: "${version}"
 
   min_version: 2023.11.1
 
 dashboard_import:
-  package_import_url: github://ApolloAutomation/AIR-1/Integrations/ESPHome/AIR-1.yaml
-  import_full_config: false # TODO: Rename
+  package_import_url: github://ApolloAutomation/PUMP-1/Integrations/ESPHome/PUMP-1.yaml
+  import_full_config: false
 
 improv_serial:
 
@@ -36,7 +36,7 @@ update:
   - platform: http_request
     id: firmware_update
     name: Firmware Update
-    source: https://apolloautomation.github.io/PLT-1/artifact/manifest.json # TODO: Rename
+    source: https://apolloautomation.github.io/PUMP-1/artifact/manifest.json
 
 wifi:
   on_connect:
@@ -45,7 +45,7 @@ wifi:
   on_disconnect:
     - ble.enable:
   ap:
-    ssid: "Apollo PLT1 Hotspot" # TODO: Rename
+    ssid: "Apollo PUMP1 Hotspot"
 
 logger:
 
