--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Build
 env:
-  DEVICE_NAME: plt-1 # TODO: Rename
+  DEVICE_NAME: pump-1 # TODO: Rename
   RELEASE_URL: ${{ github.server_url }}/${{ github.repository }}/releases/latest
 
 on:
