--- a/Integrations/ESPHome/Core.yaml
+++ b/Integrations/ESPHome/Core.yaml
@@ -77,7 +77,7 @@ binary_sensor:
               id(statusCheck).execute();
             }
   - platform: gpio
-    name: Water level exists
+    name: Water Exists
     id: water_level_exists
     icon: mdi:water
     pin: 
@@ -111,7 +111,6 @@ light:
     id: rgb_light
     name: "RGB Light"
     pin: GPIO3
-    rmt_channel: 0
     default_transition_length: 0s
     chipset: WS2812
     num_leds: 1
