--- a/Integrations/ESPHome/Core.yaml
+++ b/Integrations/ESPHome/Core.yaml
@@ -1,6 +1,6 @@
 substitutions:
   name: apollo-pump-1
-  version: "25.7.9.1"
+  version: "25.7.10.1"
   device_description: ${name} made by Apollo Automation - version ${version}.
 
 esp32:
@@ -18,11 +18,17 @@ esphome:
             id(pump_start_time) = 0;
             id(safety_alert_active) = false;
         - script.execute: pump_safety_check
-    # Add late boot phase to ensure components are initialized
     - priority: -100
       then:
-        - delay: 1000ms  # Give RMT peripheral and light component more time to initialize
+        - delay: 1000ms 
         - script.execute: statusCheck
+    - priority: -10
+      then:
+        - if:
+            condition:
+              - lambda: "return id(runTest);"
+            then:
+              - lambda: "id(testScript).execute();"
 
 api:
   services:
@@ -44,10 +50,6 @@ api:
         - script.execute: pumpUntilFull
 
 globals:
-  - id: cycleCounter
-    type: int
-    restore_value: no
-    initial_value: '0'
   - id: button_press_timestamp
     restore_value: no
     type: uint32_t
@@ -60,6 +62,12 @@ globals:
     restore_value: no
     type: bool
     initial_value: 'false'
+  - id: runTest
+    restore_value: yes
+    type: bool
+    initial_value: "true"
+  - id: testCycleCount
+    type: int
 
 captive_portal:
 
@@ -189,12 +197,23 @@ binary_sensor:
         - lambda: |-
             if (millis() - id(button_press_timestamp) >= 10000) {
               // Remove Wifi
+              id(testCycleCount) = 0;
+              id(runTest) = true;
+              id(prevent_sleep).turn_on();
               id(factory_reset_switch).turn_on();
             }
-            else {
-              // Run pump for set seconds (Task 1.8)
-              id(run_pump_timed).execute();
+            else if (millis() - id(button_press_timestamp) >= 3000) {
+              // StatusCheck
+              id(statusCheck).execute();
+              delay(3000);
+              id(testCycleCount) = 0;
+              id(runTest) = true;
+              id(testScript).execute();
             }
+            else {
+              id(run_pump_timed).execute();
+            }                          
+
   - platform: gpio
     name: Fluid Input
     id: fluid_input_sensor
@@ -218,7 +237,6 @@ binary_sensor:
         input: true
         pullup: true
       inverted: true
-
 
 number:
   - platform: template
@@ -382,6 +400,28 @@ script:
                 then:
                   - logger.log: "Water level check: No water detected - chirping buzzer"
                   - rtttl.play: 'chirp:d=16,o=6,b=200:c,p,c,p,c'
+  - id: testScript
+    then:
+      if: 
+        condition:
+          - lambda: "return id(runTest) == true;"
+        then:
+          - lambda: "id(runTest) = false;"
+          - lambda: "id(testCycleCount) = 0;"
+          - lambda: "id(runTest) = false;"
+          - light.turn_on:
+              id: rgb_light
+              red: 0%
+              green: 100%
+              blue: 0%
+          - delay: 5s
+          - light.turn_on:
+              id: rgb_light
+              red: 0%
+              green: 0%
+              blue: 0%
+          - light.turn_off:
+              id: rgb_light
 
 interval:
   - interval: 1h
