--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       matrix:
         file:
           - Integrations/ESPHome/PUMP-1.yaml
+          - Integrations/ESPHome/PUMP-1_Minimal.yaml
         esphome-version:
           - stable
           - beta
