--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -12,6 +12,7 @@ jobs:
       matrix:
         file:
           - Integrations/ESPHome/PUMP-1.yaml
+          - Integrations/ESPHome/PUMP-1_Minimal.yaml
         esphome-version:
           - stable
           - beta
